// Vitest Snapshot v1

exports[`renders 1`] = `
<section data-v-8ea4eaa5="" id="songsWrapper">
  <header data-v-5691beb5="" data-v-8ea4eaa5="" class="screen-header expanded">
    <aside data-v-5691beb5="" class="thumbnail-wrapper">
      <div data-v-55bfc268="" data-v-8ea4eaa5="" data-v-5691beb5-s="" class="thumbnail-stack single" style="background-image: url(undefined/resources/assets/img/covers/default.svg);"><span data-v-55bfc268="" data-testid="thumbnail"></span></div>
    </aside>
    <main data-v-5691beb5="">
      <div data-v-5691beb5="" class="heading-wrapper">
        <h1 data-v-5691beb5="" class="name"> All Songs
          <!--v-if-->
        </h1><span data-v-5691beb5="" class="meta text-secondary"><span data-v-8ea4eaa5="" data-v-5691beb5-s="">420 songs</span><span data-v-8ea4eaa5="" data-v-5691beb5-s="">34 hr 17 min</span></span>
      </div>
      <div data-v-8ea4eaa5="" data-v-5691beb5-s="" class="controls">
        <div data-v-d396e0d2="" data-v-8ea4eaa5="" data-v-5691beb5-s="" class="song-list-controls" data-testid="song-list-controls">
          <div data-v-d396e0d2="" class="wrapper"><span data-v-e884c19a="" data-v-d396e0d2="" class="btn-group" uppercased=""><button data-v-e368fe26="" data-v-d396e0d2="" class="btn-shuffle-all" data-testid="btn-shuffle-all" orange="" title="Shuffle all. Press Alt/⌥ to change mode."><br data-v-d396e0d2="" data-testid="Icon" icon="[object Object]" fixed-width=""> All </button><!--v-if--><!--v-if--><!--v-if--></span>
            <!--v-if-->
            <!--v-if-->
          </div>
          <div data-v-d396e0d2="" class="menu-wrapper">
            <div data-v-42061e3e="" data-v-d396e0d2="" class="add-to" data-testid="add-to-menu" tabindex="0">
              <section data-v-42061e3e="" class="existing-playlists">
                <p data-v-42061e3e="">Add 0 songs to</p>
                <ul data-v-42061e3e="">
                  <li data-v-42061e3e="" data-testid="queue" tabindex="0">Queue</li>
                  <li data-v-42061e3e="" class="favorites" data-testid="add-to-favorites" tabindex="0"> Favorites </li>
                </ul>
              </section><button data-v-e368fe26="" data-v-42061e3e="" transparent="">New Playlist…</button>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </main>
  </header><br data-v-8ea4eaa5="" data-testid="song-list">
</section>
`;

exports[`renders in Plus edition 1`] = `
<section data-v-8ea4eaa5="" id="songsWrapper">
  <header data-v-5691beb5="" data-v-8ea4eaa5="" class="screen-header expanded">
    <aside data-v-5691beb5="" class="thumbnail-wrapper">
      <div data-v-55bfc268="" data-v-8ea4eaa5="" data-v-5691beb5-s="" class="thumbnail-stack single" style="background-image: url(undefined/resources/assets/img/covers/default.svg);"><span data-v-55bfc268="" data-testid="thumbnail"></span></div>
    </aside>
    <main data-v-5691beb5="">
      <div data-v-5691beb5="" class="heading-wrapper">
        <h1 data-v-5691beb5="" class="name"> All Songs
          <!--v-if-->
        </h1><span data-v-5691beb5="" class="meta text-secondary"><span data-v-8ea4eaa5="" data-v-5691beb5-s="">420 songs</span><span data-v-8ea4eaa5="" data-v-5691beb5-s="">34 hr 17 min</span></span>
      </div>
      <div data-v-8ea4eaa5="" data-v-5691beb5-s="" class="controls">
        <div data-v-d396e0d2="" data-v-8ea4eaa5="" data-v-5691beb5-s="" class="song-list-controls" data-testid="song-list-controls">
          <div data-v-d396e0d2="" class="wrapper"><span data-v-e884c19a="" data-v-d396e0d2="" class="btn-group" uppercased=""><button data-v-e368fe26="" data-v-d396e0d2="" class="btn-shuffle-all" data-testid="btn-shuffle-all" orange="" title="Shuffle all. Press Alt/⌥ to change mode."><br data-v-d396e0d2="" data-testid="Icon" icon="[object Object]" fixed-width=""> All </button><!--v-if--><!--v-if--><!--v-if--></span>
            <!--v-if-->
            <!--v-if-->
          </div>
          <div data-v-d396e0d2="" class="menu-wrapper">
            <div data-v-42061e3e="" data-v-d396e0d2="" class="add-to" data-testid="add-to-menu" tabindex="0">
              <section data-v-42061e3e="" class="existing-playlists">
                <p data-v-42061e3e="">Add 0 songs to</p>
                <ul data-v-42061e3e="">
                  <li data-v-42061e3e="" data-testid="queue" tabindex="0">Queue</li>
                  <li data-v-42061e3e="" class="favorites" data-testid="add-to-favorites" tabindex="0"> Favorites </li>
                </ul>
              </section><button data-v-e368fe26="" data-v-42061e3e="" transparent="">New Playlist…</button>
            </div>
          </div>
        </div><label data-v-8ea4eaa5="" data-v-5691beb5-s="" class="own-songs-toggle text-secondary"><span data-v-b5259680="" data-v-8ea4eaa5="" data-v-5691beb5-s="" class=""><input data-v-b5259680="" type="checkbox"></span><span data-v-8ea4eaa5="" data-v-5691beb5-s="">Own songs only</span></label>
      </div>
    </main>
  </header><br data-v-8ea4eaa5="" data-testid="song-list">
</section>
`;
